feat!: use GsonN5Reader/Writer